# southview-OCR

./: .env.example  .gitignore  README.md  config.yaml  package-lock.json  pyproject.toml  requirements.txt  southview-production-hardening-audit.md
.pytest_tmp/test_get_video0/: test.db
.pytest_tmp/test_list_after_upload0/: test.db
.pytest_tmp/test_list_empty0/: test.db
.pytest_tmp/test_upload_duplicate0/: test.db
.pytest_tmp/test_upload_success0/: test.db
data/: southview.db-shm  southview.db-wal  southview.db.corrupt-2026-04-08.bak
docs/: usability-testing-framework.md
docs/plan/: 01_video_ingestion.md  02_frame_extraction.md  03_ocr_pipeline.md  04_database_schema.md  05_review_workflow.md  06_export_backup.md  07_job_lifecycle.md  UNIFIED_PLAN.md
frontend/: DESIGN_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  index.html  package-lock.json  pnpm-lock.yaml  replace-colors.sh  vite.config.ts
frontend/src/: main.tsx
src/southview/: __init__.py  __main__.py  auth.py  config.py
tests/: conftest.py
tests/test_api/: test_app_security.py  test_settings_api.py
tests/test_auth/: test_auth_api.py
tests/test_backup/: test_backup_manager.py
tests/test_config/: test_dotenv_loading.py
tests/test_db/: test_engine.py  test_ocr_results_migration.py
tests/test_e2e/: test_img_0729_pipeline.py
tests/test_export/: test_exporter.py  test_service.py
tests/test_extraction/: test_extraction_api.py  test_frame_extractor.py
tests/test_ingest/: test_video_api.py  test_video_upload.py
tests/test_jobs/: test_jobs_api.py  (+2 more)
tools/: run_preprocess_png.py
(+101 files in other folders)
